--- a/Galeria/page1.html
+++ b/Galeria/page1.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galería de la Tecnología - Página 1</title>
     <link rel="stylesheet" href="styles.css">
+   <div id="fondo">
+    <style>
+    body{
+         background-image: url('board.jpg');
+    }</style>
+    </div>
 </head>
 
 <body>
@@ -17,5 +23,6 @@
         soluta?</p>
     <a href="page2.html" title="Imagen siguiente" class="link-button">Siguiente imagen =&gt;</a>
 </body>
+
 
 </html>
