--- a/Galeria/page1.html
+++ b/Galeria/page1.html
@@ -11,10 +11,9 @@
 <body>
     <h1>Galería de la Tecnología</h1>
     <img src="img1.jpg" alt="Imagen de la NASA" class="image"/>
-    <h2>Lorem descripción</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur minus quia fugiat quae cumque consequatur
-        <a href="page2.html">suscipit quidem?</a> Cupiditate, quos debitis recusandae sequi, fugit quis nihil omnis atque inventore consequatur
-        soluta?</p>
+    <h2>Tierra</h2>
+    <p>Ejemplo de la tecnología, vemos en la siguiente imagen como si fuera una red interconectada de luces
+        <a href="page2.html">Otro ejemplo</a> Serian las redes, que como tal están interconectadas</p>
     <a href="page2.html" title="Imagen siguiente" class="link-button">Siguiente imagen =&gt;</a>
 </body>
 
