--- a/Galeria/page2.html
+++ b/Galeria/page2.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <h1>Galería de la Tecnología</h1>
+    <h1 class = "sombra">Galería de la Tecnología</h1>
     <img src="img2.jpg" alt="Sala de servidores" class="image"/>
-    <h2>Rack de servidor</h2>
+    <h2 class = "sombra">Rack de servidor</h2>
     <p>Imagen de redes, en este caso es un rack de servidor, interconectados con la internet, hacia todas las computadoras de la empresa perteneciente</p>
     <a href="page1.html" title="Imagen anterior" class="link-button">&lt;= Imagen anterior</a>
 </body>
